[package]
name = "osm-tag-csv-history"
version = "0.6.0"
authors = ["Amanda McCann <amanda@technomancy.org>"]
edition = "2018"
license = "AGPL-3.0+"
repository = "https://github.com/amandasaurus/osm-tag-csv-history"
description = "Use CSV tools to see who's mapping what in OpenStreetMap."
keywords = ["openstreetmap", "osm"]

[dependencies]
csv = "1.1.1"
anyhow = "1.0.26"
log = "0.4.0"
env_logger = "0.9"
clap = "3.2.20"
flate2 = "1.0.13"
do_every = "0.1.0"
read-progress = "0.2.0"
osmio = "0.6"
rusqlite = "0.25.4"
serde_json = "1.0.66"

[profile.dev]
opt-level = 3
