[package]
name = "osm-tag-csv-history"
version = "0.8.0-rc1"
authors = ["Amanda McCann <amanda@technomancy.org>"]
edition = "2024"
license = "AGPL-3.0+"
repository = "https://github.com/amandasaurus/osm-tag-csv-history"
description = "Use CSV tools to see who's mapping what in OpenStreetMap."
keywords = ["openstreetmap", "osm"]

[dependencies]
csv = "1.3.1"
anyhow = "1.0.98"
log = "0.4.27"
clap = "3.2.25"
env_logger = "0.11"
flate2 = "1.1.1"
do_every = "0.1.0"
read-progress = "0.2.0"
osmio = "0.15.0-rc1"
rusqlite = "0.35.0"
serde_json = "1.0.140"
smol_str = "0.3.2"
smallvec = "1.15.0"

[profile.dev]
opt-level = 3
