[package]
name = "osm-tag-csv-history"
version = "0.9.0-dev"
authors = ["Amanda McCann <amanda@technomancy.org>"]
edition = "2024"
license = "AGPL-3.0+"
repository = "https://github.com/amandasaurus/osm-tag-csv-history"
description = "Use CSV tools to see who's mapping what in OpenStreetMap."
keywords = ["openstreetmap", "osm"]

[dependencies]
csv = "1.4.0"
anyhow = "1.0.103"
log = "0.4.33"
clap = "3"
env_logger = "0.11"
flate2 = "1.1.9"
do_every = "0.1.0"
read-progress = "0.5.0"
osmio = "0.15.0"
rusqlite = "0.40.1"
serde_json = "1.0.150"
smol_str = "0.3.6"
smallvec = "1.15.2"
chrono = "0.4.45"
tzfile = "0.1.3"

[profile.dev]
opt-level = 3
